--- a/src/pages/post/post.module.scss
+++ b/src/pages/post/post.module.scss
@@ -1,1 +1,54 @@
-// TODO
+.container {
+  width: 100%;
+
+  img {
+    width: 100%;
+    max-height: 25rem;
+  }
+}
+
+.contentContainer {
+  max-width: 1120px;
+  margin: 5rem auto;
+
+
+  h1 {
+    font-size: 3rem;
+    font-weight: 700;
+    line-height: 3.625rem;
+  }
+
+  div {
+    display: flex;
+    margin: 1.5rem 0 4rem;
+
+    .infoItem {
+      font-size: 0.875rem;
+      display: flex;
+      align-items: center;
+      color: var(--gray-700);
+      font-weight: 400;
+
+      margin-right: 1.5rem;
+
+      svg {
+        margin-right: 0.5rem;
+        font-size: 1.25rem;
+      }
+    }
+  }
+
+  section {
+    strong {
+      font-weight: 700;
+      font-size: 2rem;
+    }
+
+    p {
+      text-align: justify;
+      margin: 1.5rem 0 2rem;
+      color: var(--gray-700);
+      font-weight: 400;
+    }
+  }
+}
