--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -4,4 +4,63 @@
   padding: 0;
 }
 
-// TODO
+:root {
+  --white: #ffffff;
+  --black-500: #1A1D23;
+
+  --pink-500: #FF57B2;
+
+  --gray-300: #F8F8F8;
+  --gray-500: #D7D7D7;
+  --gray-700: #DDDDDD;
+
+  ::-webkit-scrollbar
+  {
+      width: 4px !important;
+      height: 4px !important;
+      cursor: pointer;
+  }
+
+  ::-webkit-scrollbar-thumb
+  {
+      background-color: var(--pink-500) !important;
+      border-radius: 8px;
+  }
+
+  ::-webkit-scrollbar-track
+  {
+      background: transparent !important;
+  }
+}
+
+@media (max-width: 1080px)
+{
+  html {
+      font-size: 93.75%;
+  }
+}
+
+@media (max-width: 1080px)
+{
+  html {
+      font-size: 87.5%;
+  }
+}
+
+body {
+  background: var(--black-500);
+  color: var(--gray-300);
+}
+
+body, input, textarea, select, button {
+  font: 400 1rem "Inter", sans-serif;
+}
+
+button {
+  cursor: pointer;
+}
+
+a {
+  color: inherit;
+  text-decoration: none;
+}
