--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -10,6 +10,7 @@
 
   --pink-500: #FF57B2;
 
+  --gray-200: rgb(215, 215, 215, .1);
   --gray-300: #F8F8F8;
   --gray-500: #D7D7D7;
   --gray-700: #DDDDDD;
