--- a/src/styles/common.module.scss
+++ b/src/styles/common.module.scss
@@ -1,1 +1,19 @@
-// TODO
+a.exitPreviewButtonContainer {
+  align-items: center;
+  background: var(--gray-300);
+  display: flex;
+  justify-content: center;
+
+  color: var(--black-500);
+  font-family: inherit;
+  font-weight: 600;
+  font-style: normal;
+  font-size: 1.125rem;
+  width: 43.75rem;
+  height: 3.625rem;
+  border: none;
+  line-height: 22px;
+  text-align: justify;
+
+  align-self: center;
+}
